Fix sticky table header z-index

--- a/Plan/react/dashboard/src/style/style.css
+++ b/Plan/react/dashboard/src/style/style.css
@@ -1441,3 +1441,7 @@ ul.filters {
     justify-content: space-between;
     align-items: center;
 }
+
+.sticky-top {
+    z-index: unset;
+}
